--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "auto-bind": "^4.0.0",
     "axios": "^0.21.1",
     "butter-toast": "^3.3.5",
+    "http-proxy-middleware": "^1.1.1",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-material-ui-carousel": "^2.2.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
